--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,6 +86,9 @@ $main-color: #7f0019;
 	border-bottom: solid 6px $main-color;
 	p {
 		margin: 0 .5em 1em;
+		a:link,a:visited {
+			color: $main-color;
+		}
 		img {
 			display: block;
 			margin: 0 auto;
