pager 部分の CSS 追加

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -121,6 +121,14 @@ $main-color: #7f0019;
 			list-style-type: none;
 		}
 	}
+	.social-buttons {
+		display: none;
+	}
+}
+
+#pager {
+	margin: 0 auto;
+	width: 460px;
 }
 
 #footer {
