tag の部分にスタイル当てるの忘れてた
Tumblr でタグを入れたらデフォルトスタイルのままだったことに気づいたので修正

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@ $main-color: #7f0019;
 	padding: 0.4em 0.5em;
 	.meta {
 		float: left;
-		.timeago{
+		.meta-elements {
 			a:link,a:visited {
 				color: #323232;
 				text-decoration: none;
