記事ごとの影の修正

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,8 +48,8 @@ $main-color: #7f0019;
 	width: 460px;
 	background: #f5f2e9;
 	border-top: solid 10px $main-color;
-	box-shadow: 0 0 1px #444;
-	box-shadow: 0 0 1px rgba(0,0,0, 0.4);
+	box-shadow: 1px 0 1px #444,-1px 1px 1px #444;
+	box-shadow: 1px 0px 1px rgba(0,0,0,0.4), -1px 1px 1px rgba(0,0,0,0.4);
 }
 
 .date {
@@ -105,6 +105,7 @@ $main-color: #7f0019;
 	img {
 		display: block;
 		margin: 0 auto;
+		max-width: 100%;
 	}
 }
 
