iframe を貼り付けた時の指定を追加

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@ $main-color: #7f0019;
 			}
 		}
 	}
-	img {
+	img,iframe {
 		display: block;
 		margin: 0 auto;
 		max-width: 100%;
@@ -135,6 +135,23 @@ $main-color: #7f0019;
 	}
 	.social-buttons {
 		display: none;
+	}
+	.notecontainer {
+		margin: 2em 0 0;
+		border-top: solid 2px #ccc;
+		.avatar_frame {
+			display: inline-block;
+			margin: 0 .3em 0 0;
+		}
+		.action a {
+			&:link,&:visited {
+				color: $main-color;
+				text-decoration: none;
+			}
+			&:hover {
+				text-decoration: underline;
+			}
+		}
 	}
 }
 
